--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,8 +50,7 @@ about:
     building block for fitting psychometric mixture models in package "psychomix" and
     trees based on psychometric models in package "psychotree".
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
