--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = '0.4-2' %}
-
+{% set version = '0.5-0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,34 +7,36 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: psychotools_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/psychotools_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/psychotools/psychotools_{{ version }}.tar.gz
-  sha256: a035421fb3bab431a7d80880b3bebf6fff901be059e3bc0c46422296c6f2e512
+    - {{ cran_mirror }}/src/contrib/psychotools_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/psychotools/psychotools_{{ version }}.tar.gz
+  sha256: 8b3eff0bc432b3d5aab58bfeff4e6225870ab86edc5c288ef34dab2ddb0fbd90
 
 build:
   merge_build_host: True  # [win]
-  number: 1001
-  skip: true  # [win32]
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('psychotools')"  # [not win]
+    - $R -e "library('psychotools')"           # [not win]
     - "\"%R%\" -e \"library('psychotools')\""  # [win]
 
 about:
@@ -43,19 +44,33 @@ about:
   license: GPL-2 | GPL-3
   summary: Infrastructure for psychometric modeling such as data classes (for item response data
     and paired comparisons), basic model fitting functions (for Bradley-Terry, Rasch,
-    partial credit, rating scale, multinomial processing tree models), extractor functions
-    for different types of parameters (item, person, threshold, discrimination), unified
-    inference and visualizations, and various datasets for illustration. Intended as
-    a common lightweight and efficient toolbox for psychometric modeling and a common
-    building block for fitting psychometric mixture models in package "psychomix" and
-    trees based on psychometric models in package "psychotree".
+    parametric logistic IRT, generalized partial credit, rating scale, multinomial processing
+    tree models), extractor functions for different types of parameters (item, person,
+    threshold, discrimination, guessing, upper asymptotes), unified inference and visualizations,
+    and various datasets for illustration.  Intended as a common lightweight and efficient
+    toolbox for psychometric modeling and a common building block for fitting psychometric
+    mixture models in package "psychomix" and trees based on psychometric models in
+    package "psychotree".
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
+    - conda-forge/r
+
+# Package: psychotools
+# Title: Psychometric Modeling Infrastructure
+# Version: 0.5-0
+# Date: 2018-12-19
+# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org", comment = c(ORCID = "0000-0003-0918-3766")), person(given = "Carolin", family = "Strobl", role = "aut", email = "Carolin.Strobl@psychologie.uzh.ch"), person(given = "Florian", family = "Wickelmaier", role = "aut"), person(given = "Basil", family = "Komboz", role = "aut"), person(given = "Julia", family = "Kopf", role = "aut"), person(given = "Lennart", family = "Schneider", role = "aut"), person(given = "Rudolf", family = "Debelak", role = "aut"))
+# Depends: R (>= 2.10.0)
+# Imports: graphics, grDevices, stats, utils
+# Suggests: Formula, likert, mirt, multcomp, sandwich
+# Description: Infrastructure for psychometric modeling such as data classes (for item response data and paired comparisons), basic model fitting functions (for Bradley-Terry, Rasch, parametric logistic IRT, generalized partial credit, rating scale, multinomial processing tree models), extractor functions for different types of parameters (item, person, threshold, discrimination, guessing, upper asymptotes), unified inference and visualizations, and various datasets for illustration.  Intended as a common lightweight and efficient toolbox for psychometric modeling and a common building block for fitting psychometric mixture models in package "psychomix" and trees based on psychometric models in package "psychotree".
+# License: GPL-2 | GPL-3
+# NeedsCompilation: yes
+# Packaged: 2018-12-19 19:42:13 UTC; zeileis
+# Author: Achim Zeileis [aut, cre] (<https://orcid.org/0000-0003-0918-3766>), Carolin Strobl [aut], Florian Wickelmaier [aut], Basil Komboz [aut], Julia Kopf [aut], Lennart Schneider [aut], Rudolf Debelak [aut]
+# Maintainer: Achim Zeileis <Achim.Zeileis@R-project.org>
+# Repository: CRAN
+# Date/Publication: 2018-12-19 22:48:24 UTC
