--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,12 +41,13 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=psychotools
-  license: GPL-2 | GPL-3
+  license: GPL-2.0-or-later
   summary: Infrastructure for psychometric modeling such as data classes (for item response data and paired comparisons), basic model fitting functions (for Bradley-Terry, Rasch, parametric logistic IRT, generalized partial credit, rating scale, multinomial processing tree models), extractor functions for different types
     of parameters (item, person, threshold, discrimination, guessing, upper asymptotes), unified inference and visualizations, and various datasets for illustration.  Intended as a common lightweight and efficient toolbox for psychometric modeling and a common building block for fitting psychometric mixture models in package
     "psychomix" and trees based on psychometric models in package "psychotree".
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
